--- a/GCR.Business/GCR.Business.csproj
+++ b/GCR.Business/GCR.Business.csproj
@@ -56,6 +56,9 @@
     <Reference Include="Mono.Math">
       <HintPath>..\packages\DotNetOpenAuth.OpenId.Core.4.1.4.12333\lib\net45-full\Mono.Math.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject">
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
@@ -86,6 +89,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationModule.cs" />
+    <Compile Include="Security\BitlyClient.cs" />
     <Compile Include="Security\InitializeSimpleMembership.cs" />
     <Compile Include="Security\SecurityProvider.cs" />
     <Compile Include="Services\PhotoService.cs" />
