--- a/GCR.Business/packages.config
+++ b/GCR.Business/packages.config
@@ -10,5 +10,6 @@
   <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
