--- a/GCR.Web/GCR.Web.csproj
+++ b/GCR.Web/GCR.Web.csproj
@@ -60,6 +60,12 @@
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -181,6 +187,7 @@
     <Compile Include="Infrastructure\ControllerExtensions.cs" />
     <Compile Include="Infrastructure\Enums.cs" />
     <Compile Include="Infrastructure\HtmlHelperExtensions.cs" />
+    <Compile Include="Infrastructure\HttpsRequiredAttribute.cs" />
     <Compile Include="Infrastructure\HttpStatusDescription.cs" />
     <Compile Include="Infrastructure\JsonNetResult.cs" />
     <Compile Include="Infrastructure\JsonNetValueProviderFactory.cs" />
@@ -229,6 +236,7 @@
     <Content Include="Content\images\fb.png" />
     <Content Include="Content\images\Info32.png" />
     <Content Include="Content\images\logo.png" />
+    <Content Include="Content\images\map.jpg" />
     <Content Include="Content\images\menu-border.gif" />
     <Content Include="Content\images\NoPhoto.png" />
     <Content Include="Content\images\sad.jpg" />
@@ -369,15 +377,21 @@
     </Content>
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Content\fonts\PatuaOne-Regular.woff" />
+    <Content Include="App_Data\piczard_tmp\__CCPZTF_3b83359a45c644138c90391fc7670df2__wt.tmp" />
+    <Content Include="App_Data\piczard_tmp\__CCPZTF_913056547e304eceb10058a3d3e1d9d9__wt.tmp" />
+    <Content Include="App_Data\piczard_tmp\__CCPZTF_f1b8e022d3a24dd1ad023772d0a8adf6__wt.tmp" />
+    <Content Include="App_Data\piczard_tmp\__CCPZTF_fbeaa1a5a6e44c02b296e5f796d825b2__wt.tmp" />
     <None Include="Content\site.less" />
     <None Include="Content\base.less" />
-    <None Include="Content\_base.css.bundle" />
+    <None Include="Content\_base.css.bundle">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="ImageUpload.aspx" />
     <Content Include="piczardUserControls\simpleImageUploadUserControl\blank.gif" />
     <Content Include="piczardUserControls\simpleImageUploadUserControl\preview.ashx" />
     <Content Include="piczardUserControls\simpleImageUploadUserControl\uploadMonitor.ashx" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
-    <None Include="Properties\PublishProfiles\test.pubxml" />
     <Content Include="Scripts\ckeditor\CHANGES.md" />
     <Content Include="Scripts\ckeditor\LICENSE.md" />
     <Content Include="Scripts\ckeditor\README.md" />
@@ -496,10 +510,14 @@
     <Content Include="Views\News\_Layout.cshtml" />
     <Content Include="Views\News\_Recent.cshtml" />
     <Content Include="Views\HomePagePhoto\_HomePage.cshtml" />
+    <None Include="Web.AzureDebug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="Web.AzureRelease.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Content\fonts\" />
     <Folder Include="Filters\" />
   </ItemGroup>
   <ItemGroup>
@@ -522,6 +540,24 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'AzureDebug|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;AzureDebug</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'AzureRelease|AnyCPU'">
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>TRACE;AzureRelease</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
