--- a/GCR.Web/Web.config
+++ b/GCR.Web/Web.config
@@ -18,7 +18,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DB" connectionString="Data Source=qciapp3\sql2012;Initial Catalog=WebpageTest;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />
+    <add name="DB" connectionString="Data Source=qciapp3\sql2012;Initial Catalog=GCR;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />
     <!--<add name="DB" connectionString="Data Source=oxford\sql2012;Initial Catalog=GCR;Integrated Security=True;MultipleActiveResultSets=True;App=GCR.Web" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
@@ -31,8 +31,8 @@
     <add key="UploadPath" value="Uploads" />
     <add key="elmah.mvc.disableHandler" value="false" />
     <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
-    <add key="elmah.mvc.requiresAuthentication" value="false" />
-    <add key="elmah.mvc.allowedRoles" value="*" />
+    <add key="elmah.mvc.requiresAuthentication" value="true" />
+    <add key="elmah.mvc.allowedRoles" value="Admin" />
     <add key="elmah.mvc.route" value="elmah" />
   </appSettings>
   <system.web>
@@ -66,7 +66,7 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
-    <customErrors mode="On" defaultRedirect="~/Error/">
+    <customErrors mode="Off" defaultRedirect="~/Error/">
       <error statusCode="404" redirect="~/Error/NotFound/" />
     </customErrors>
   </system.web>
@@ -160,6 +160,7 @@
     </system.web>
   </location>
   <elmah>
+    <security allowRemoteAccess="1" />
     <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data/errorLog/" />
   </elmah>
 </configuration>
